--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <link href='styles.css' rel='stylesheet'>
-<body onload='init()'>
-<script src='three.js'></script>
-<script src='effectcomposer.js'></script>
-<script src='renderpass.js'></script>
-<script src='shaderpass.js'></script>
-<script src='technicolorshader.js'></script>
-<script src='filmshader.js'></script>
-<script src='filmpass.js'></script>
-<script src='script.js'></script>
+<body onload='init( )'>
+  <canvas id='canvas'></canvas>
+  <video autoplay id='videoRoad' loop src='LH Road.mp4'></video>
+  <video autoplay id='videoSky' loop src='LH Sky 2.mp4'></video>
+  <video autoplay id='videoGround' loop src='LH Ground.mp4'></video>
+  <video autoplay id='videoEye' loop src='ACFW Eye.mp4'></video>
+  <script src='three.js'></script>
+  <script src='copyshader.js'></script>
+  <script src='effectcomposer.js'></script>
+  <script src='renderpass.js'></script>
+  <script src='shaderpass.js'></script>
+  <script src='technicolorshader.js'></script>
+  <script src='filmshader.js'></script>
+  <script src='filmpass.js'></script>
+  <script src='script.js'></script>
 </body>
+<!-- ’Thompson’ by George Waraw @ 06.2018 -->
